correctin according recommedations

--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
                 src="./images/desktop-app.jpg"
                 alt="desktop aplication"
                 width="360"
-                height="300"
               />
             </li>
             <li class="activity-item">
@@ -127,7 +126,6 @@
                 src="./images/mobile-app.jpg"
                 alt="mobile aplication"
                 width="360"
-                height="300"
               />
             </li>
             <li class="activity-item">
@@ -135,7 +133,6 @@
                 src="./images/all-platform-app.jpg"
                 alt="same aplication for desktop and mobile platform"
                 width="360"
-                height="300"
               />
             </li>
           </ul>
@@ -153,10 +150,11 @@
                 src="./images/mark-guerrero.jpg"
                 alt="Mark Guerrero photo"
                 width="264"
-                height="260"
               />
-              <h3 class="team-item-name">Mark Guerrero</h3>
-              <p class="team-item-text">Product Designer</p>
+              <div class="team-item-card">
+                <h3 class="team-item-name">Mark Guerrero</h3>
+                <p class="team-item-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -165,28 +163,32 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-name">Tom Ford</h3>
-              <p class="team-item-text">Frontend Developer</p>
+              <div class="team-item-card">
+                <h3 class="team-item-name">Tom Ford</h3>
+                <p class="team-item-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
                 src="./images/camila-garcia.jpg"
                 alt="Camila Garcia photo"
                 width="264"
-                height="260"
               />
-              <h3 class="team-item-name">Camila Garcia</h3>
-              <p class="team-item-text">Marketing</p>
+              <div class="team-item-card">
+                <h3 class="team-item-name">Camila Garcia</h3>
+                <p class="team-item-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
                 src="./images/daniel-wilson.jpg"
                 alt="Daniel Wilson photo"
                 width="264"
-                height="260"
               />
-              <h3 class="team-item-name">Daniel Wilson</h3>
-              <p class="team-item-text">UI Designer</p>
+              <div class="team-item-card">
+                <h3 class="team-item-name">Daniel Wilson</h3>
+                <p class="team-item-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
