--- a/portfolio.html
+++ b/portfolio.html
@@ -98,10 +98,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-content-title">
-                  Banking App Interface Concept
-                </h2>
-                <p class="portfolio-content-type">App</p></a
+                <div class="portfolio-item-card">
+                  <h2 class="portfolio-content-title">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="portfolio-content-type">App</p>
+                </div></a
               >
             </li>
             <li class="portfolio-content-item">
@@ -112,8 +114,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-content-title">Cashless Payment</h2>
-                <p class="portfolio-content-type">Marketing</p></a
+                <div class="portfolio-item-card">
+                  <h2 class="portfolio-content-title">Cashless Payment</h2>
+                  <p class="portfolio-content-type">Marketing</p>
+                </div></a
               >
             </li>
             <li class="portfolio-content-item">
@@ -124,8 +128,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-content-title">Meditation App</h2>
-                <p class="portfolio-content-type">App</p></a
+                <div class="portfolio-item-card">
+                  <h2 class="portfolio-content-title">Meditation App</h2>
+                  <p class="portfolio-content-type">App</p>
+                </div></a
               >
             </li>
             <li class="portfolio-content-item">
@@ -136,8 +142,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-content-title">Taxi Service</h2>
-                <p class="portfolio-content-type">Marketing</p></a
+                <div class="portfolio-item-card">
+                  <h2 class="portfolio-content-title">Taxi Service</h2>
+                  <p class="portfolio-content-type">Marketing</p>
+                </div></a
               >
             </li>
             <li class="portfolio-content-item">
@@ -148,8 +156,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-content-title">Screen Illustrations</h2>
-                <p class="portfolio-content-type">Design</p></a
+                <div class="portfolio-item-card">
+                  <h2 class="portfolio-content-title">Screen Illustrations</h2>
+                  <p class="portfolio-content-type">Design</p>
+                </div></a
               >
             </li>
             <li class="portfolio-content-item">
@@ -160,8 +170,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-content-title">Online Courses</h2>
-                <p class="portfolio-content-type">Marketing</p></a
+                <div class="portfolio-item-card">
+                  <h2 class="portfolio-content-title">Online Courses</h2>
+                  <p class="portfolio-content-type">Marketing</p>
+                </div></a
               >
             </li>
             <li class="portfolio-content-item">
@@ -172,10 +184,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-content-title">
-                  Instagram Stories Concept
-                </h2>
-                <p class="portfolio-content-type">Design</p></a
+                <div class="portfolio-item-card">
+                  <h2 class="portfolio-content-title">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="portfolio-content-type">Design</p>
+                </div></a
               >
             </li>
             <li class="portfolio-content-item">
@@ -186,8 +200,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-content-title">Organic Food</h2>
-                <p class="portfolio-content-type">Web Site</p></a
+                <div class="portfolio-item-card">
+                  <h2 class="portfolio-content-title">Organic Food</h2>
+                  <p class="portfolio-content-type">Web Site</p>
+                </div></a
               >
             </li>
             <li class="portfolio-content-item">
@@ -198,8 +214,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-content-title">Fresh Coffee</h2>
-                <p class="portfolio-content-type">Web Site</p></a
+                <div class="portfolio-item-card">
+                  <h2 class="portfolio-content-title">Fresh Coffee</h2>
+                  <p class="portfolio-content-type">Web Site</p>
+                </div></a
               >
             </li>
           </ul>
