--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="header-logo-text link" href="./index.html"
+        <a class="footer-logo-text link" href="./index.html"
           >Web<span class="header-logo-text cloud">Studio</span></a
         >
         <p class="footer-text">
