--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <footer class="footer">
       <div class="container">
         <a class="footer-logo-text link" href="./index.html"
-          >Web<span class="header-logo-text cloud">Studio</span></a
+          >Web<span class="footer-logo-text cloud">Studio</span></a
         >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
